<resources>
    <string name="app_name">Books Catalog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">Georgi Gerdzhikov</string>
    <string name="user_books_count_message">Your books are:</string>
    <string name="user_books_count">25</string>
    <string name="my_fav_books">My Favourite Books</string>
    <string name="more_books">Books</string>
    <string name="historic_category">Historic</string>
    <string name="fantasy_category">Fantasy</string>
    <string name="thriller_category">Thriller</string>
    <string name="book_categories">Books Categories</string>
</resources>
